--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,13 @@ spring:
   output:
     ansi:
       enabled: ALWAYS    # 콘솔 출력에서 ANSI 색상을 항상 활성화합니다.
+  web:
+    cors:
+      allowed-origins: "http://localhost:3000"
+      allowed-methods:
+        - GET
+        - POST
+
 logging:
   level:
     org:
